--- a/site/style.css
+++ b/site/style.css
@@ -6,7 +6,7 @@ body {
 
     font-family: "Roboto Slab";
     background-color: #00021b;
-    background-image: linear-gradient(#02074f 0%, rgba(0, 6, 88, 0.182) 100%);
+    background-image: linear-gradient(#000438 0%, rgba(0, 3, 52, 0.182) 100%);
     color: white;
     height:100vh;
 }
@@ -58,7 +58,7 @@ justify-content: center;
     width:40vw;
     background-color: rgb(15, 0, 113);
     height:auto;
- background-image: radial-gradient( rgb(11,0,83) 0%, rgb(18, 0, 136) 100%);
+ background-image: radial-gradient( rgb(11,0,83) 0%, rgba(11, 0, 82, 0.849) 100%);
  border-radius: 10px;;
 
     
